@@ -39,8 +39,8 @@ public class GodObjectButNotTarget{
 
     private long fibonacci(long index){
         return fibonacci.computeIfAbsent(
-            new Integer((int)index),
-            i -> fibonacci(i - 1) + fibonacci(i - 2));
+                Integer.valueOf((int) index),
+                i -> fibonacci(i - 1) + fibonacci(i - 2));
     }
 
     public Stream<String> fizzbuzz(){
